fix horizontal scroll

--- a/css/FINAL-TEST/scss/components/content-area/_diet-menu.scss
+++ b/css/FINAL-TEST/scss/components/content-area/_diet-menu.scss
@@ -1,5 +1,5 @@
 .diet-menu {
-    margin: 0 20px 20px 0;
+    margin: 0 0 20px 0;
     border-radius: 20px;
 }
 .radius1rem {
